# polynomial-finder-rs

./: Cargo.toml
.github/workflows/: rust.yml
src/: calculator.rs  main.rs
src/calculator/: area.rs  circle.rs  float_parser.rs  mod.rs  polynomial.rs
src/structures/: circle.rs  mod.rs  points.rs
